--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -9,7 +9,7 @@
   margin-right: 93px;
 }
 .menu {
-  display: flex;
+  display: none;
   & .item:not(:last-child) {
     margin-right: 50px;
   }
@@ -44,7 +44,7 @@
   align-items: center;
 }
 .connect {
-  display: flex;
+  display: none;
   justify-content: center;
   margin-left: auto;
 }
@@ -77,4 +77,46 @@
   width: 10px;
   height: 16px;
   margin-right: 10px;
+}
+
+.menu-open{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  border: 0;
+  background-color: var(--primary-color);
+  padding: 12px 8px;
+}
+.mob-menu {
+  position: fixed;
+  top:0;
+  background-color: var(--primary-color);
+  width: 100vw;
+  height: 100vh;
+}
+
+.menu-close{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #000000;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  z-index: 2;
+}
+.menu-close__icon {
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+  fill: var(--acent-color);
+}
 }
