--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,8 +1,6 @@
 .hero {
-  // padding: 200px 0;
-  padding: 60px 118px;
-  max-width: 480px;
-  height: 400px;
+  padding:118px 0;
+  max-width: 1600px;
   margin: 0 auto;
   background-color: var(--secondary-color);
   text-align: center;
@@ -11,19 +9,75 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/hero.jpg");
+    url("../images/hero-mobile.jpg");
+    @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-mobile-2x.jpg");
+}
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media screen and (min-width:768px) {
+    max-width: 768px;
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-tablet.jpg");
+  }
+    @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero-tablet-2x.jpg");
+}
+  @media screen and (min-width:1200px) {
+    max-width: 1600px;
+    padding: 200px 0;
+    background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero.jpg");
+    @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/hero-2x.jpg"); 
+  }
+}
 }
 .hero__title {
   margin: 0 auto 30px;
   color: var(--primary-text-color-light);
-  @include font(900, 26px, 1.61, 0.06em);
+  @include font(900, 26px, 1.62, 0.06em);
   text-transform: uppercase;
+  @media screen and (min-width:1200px) {
+    @include font(900, 44px, 1.36, 0.06em); 
+  }
 }
 .hero__button {
   margin: 0 auto;
   min-width: 200px;
+  height: 50px;
   padding: 10px 24px;
 }
