--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,10 @@ img {
   width: 100%;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -406,6 +410,13 @@ img {
 .menu .item:not(:last-child) {
   margin-right: 50px;
 }
+@media screen and (min-width: 768px) {
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 
 .link.current {
   color: var(--acent-color);
@@ -453,9 +464,33 @@ img {
           justify-content: center;
   margin-left: auto;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .connect {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .connect {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: auto;
+  }
+}
 
 .connect__item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 10px;
 }
 
 .connect__item a {
@@ -472,6 +507,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: var(--primary-text-color-dark);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
@@ -514,6 +550,11 @@ img {
   background-color: var(--primary-color);
   padding: 12px 8px;
 }
+@media screen and (min-width: 768px) {
+  .menu-open {
+    display: none;
+  }
+}
 
 .mob-menu {
   position: fixed;
@@ -521,6 +562,20 @@ img {
   background-color: var(--primary-color);
   width: 100vw;
   height: 100vh;
+}
+.mob-menu > .container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: auto;
 }
 
 .menu-close {
@@ -541,9 +596,8 @@ img {
   border-radius: 50%;
   color: #000000;
   background-color: transparent;
-  border: 0;
+  border: none;
   cursor: pointer;
-  z-index: 2;
 }
 
 .menu-close__icon {
@@ -553,6 +607,71 @@ img {
 }
 .menu-close__icon:hover, .menu-close__icon:focus {
   fill: var(--acent-color);
+}
+
+.mob-menu {
+  padding: 48px 0 48px 48px;
+}
+
+.mob-menu__list {
+  margin-bottom: 50px;
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-connect__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-connect__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-connect__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-connect__list {
+  margin-bottom: 64px;
+}
+
+.mob-network__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mob-network__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.mob-network__link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .hero {
