--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -13,6 +13,9 @@
   & .item:not(:last-child) {
     margin-right: 50px;
   }
+  @media screen and (min-width:768px) {
+    display: flex;
+  }
 }
 .link.current {
   color: var(--acent-color);
@@ -47,9 +50,19 @@
   display: none;
   justify-content: center;
   margin-left: auto;
+  @media screen and (min-width:768px) and (max-width:1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  @media screen and (min-width:1200px) {
+    display: flex;
+    justify-content: center;
+  margin-left: auto;
+  }
 }
 .connect__item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 10px;
 }
 .connect__item a {
   color: var(--primary-text-color-dark);
@@ -58,6 +71,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--primary-text-color-dark);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @include font(500, 14px, 1.14, 0.02em);
   &:hover,
@@ -87,6 +101,9 @@
   border: 0;
   background-color: var(--primary-color);
   padding: 12px 8px;
+  @media screen and (min-width:768px) {
+    display: none;
+  }
 }
 .mob-menu {
   position: fixed;
@@ -94,6 +111,13 @@
   background-color: var(--primary-color);
   width: 100vw;
   height: 100vh;
+  >.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+  }
 }
 
 .menu-close{
@@ -108,9 +132,8 @@
   border-radius: 50%;
   color: #000000;
   background-color: transparent;
-  border: 0;
+  border: none;
   cursor: pointer;
-  z-index: 2;
 }
 .menu-close__icon {
   fill: currentColor;
@@ -119,4 +142,54 @@
   &:focus {
   fill: var(--acent-color);
 }
+}
+.mob-menu{
+  padding: 48px 0 48px 48px;
+}
+.mob-menu__list{
+  margin-bottom: 50px;
+}
+.mob-menu__link{
+font-weight: 500;
+font-size: 40px;
+line-height: 1.18;
+letter-spacing: 0.02em;
+color: #212121;
+}
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-connect__mail{
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.mob-connect__tel{
+  font-weight: 500;
+font-size: 34px;
+line-height: 40px;
+letter-spacing: 0.02em;
+color: #757575;
+}
+.mob-connect__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-connect__list{
+  margin-bottom: 64px;
+}
+.mob-network__list{
+  display: flex;
+  align-items: center;
+}
+.mob-network__item:not(:last-child) {
+  margin-right: 20px;
+}
+.mob-network__link{
+  font-weight: 500;
+font-size: 16px;
+line-height: 22px;
+letter-spacing: 0.02em;
+color: #2196F3;
 }
