--- a/css/main.css
+++ b/css/main.css
@@ -996,16 +996,82 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container-general {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer__container-general {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container-general {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
 }
 
-.footer__container {
-  margin-right: 70px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__tablet {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__container {
+    margin-bottom: 60px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    margin-right: 70px;
+  }
 }
 
 .footer__logo {
@@ -1040,6 +1106,26 @@ img {
 .footer__networks {
   width: 206px;
 }
+@media screen and (max-width: 1199px) {
+  .footer__networks {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__networks {
+    margin-bottom: 60px;
+    width: 100%;
+  }
+}
 
 .footer__networks-text {
   font-weight: 700;
@@ -1067,11 +1153,34 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 20px;
-  width: 570px;
+}
+@media screen and (max-width: 1199px) {
+  .futer__form-block {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .futer__form-block {
+    width: 450px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .futer__form-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 20px;
+    width: 570px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .futer__form-label {
@@ -1082,10 +1191,18 @@ img {
   text-transform: uppercase;
   color: var(--primary-color);
 }
+@media screen and (max-width: 1199px) {
+  .futer__form-label {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
 
 .futer__form-input {
   width: 100%;
   padding: 15px 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   outline: transparent;
@@ -1126,8 +1243,10 @@ img {
   /*color: rgba(255, 255, 255, 0.6);*/
 }
 
-.futer__form {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .futer__form {
+    margin-left: 93px;
+  }
 }
 
 .futer__form-button {
