--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,11 +4,48 @@
 }
 .footer__container-general {
   display: flex;
+  
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-left: 80px;
+    padding-right: 80px;
+    }
+    @media screen and (max-width:1199px) {
+      flex-wrap: wrap;
+      flex-direction: column;
+    }
+   @media screen and (min-width:1200px) {
+    align-items: baseline;
+    justify-content: flex-start;
+   }
+}
+.footer__tablet{
+  // display: none;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 60px;
+    }
+  @media screen and (min-width: 768px) {
+  display: flex;
   align-items: baseline;
   justify-content: flex-start;
+  }
 }
 .footer__container {
-  margin-right: 70px;
+  @media screen and (max-width:1199px) {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  }
+  @media screen and (max-width:767px) {
+    margin-bottom: 60px;
+    width: 100%;
+  }
+  @media screen and (min-width:768px) {
+    margin-right: 165px;
+  }
+  @media screen and (min-width:1200px) {
+    margin-right: 70px;
+  }
 }
 .footer__logo {
   margin-bottom: 20px;
@@ -33,6 +70,16 @@
 }
 .footer__networks {
   width: 206px;
+  @media screen and (max-width:1199px) {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  }
+  @media screen and (max-width:767px) {
+    margin-bottom: 60px;
+    width: 100%;
+  }
 }
 .footer__networks-text {
   @include font(700, 14px, 1.14, 0.03em);
@@ -50,18 +97,35 @@
 .futer__form-block {
   display: flex;
   align-items: center;
+  @media screen and (max-width:1199px) {
+  flex-wrap: wrap;
+  flex-direction: column;
+  }
+  @media screen and (min-width:768px) and (max-width:1199px) {
+    width: 450px;
+    margin: 0 auto;
+  }
+  @media screen and (min-width:1200px) {
   justify-content: center;
   margin-top: 20px;
   width: 570px;
+  align-items: baseline;
+  }
 }
 .futer__form-label {
   @include font(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
   color: var(--primary-color);
+  @media screen and (max-width:1199px) {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    }
 }
 .futer__form-input {
   width: 100%;
   padding: 15px 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   outline: transparent;
@@ -78,7 +142,9 @@
 }
 }
 .futer__form {
-  margin-left: 93px;
+  @media screen and (min-width:1200px) {
+    margin-left: 93px;
+    }
 }
 .futer__form-button {
   margin-left: 12px;
