--- a/css/main.css
+++ b/css/main.css
@@ -202,8 +202,8 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   padding: 40px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -287,6 +287,14 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
+}
+@media screen and (min-width: 1200px) {
+  .backdrop-label {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+  }
 }
 
 .backdrop-input {
@@ -376,7 +384,7 @@ img {
 
 .backdrop-link {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--acent-color);
@@ -489,8 +497,15 @@ img {
   }
 }
 
-.connect__item:not(:last-child) {
-  margin-bottom: 10px;
+@media screen and (max-width: 1199px) {
+  .connect__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .connect__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .connect__item a {
@@ -501,12 +516,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   color: var(--primary-text-color-dark);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -517,6 +526,16 @@ img {
 }
 .connect__link:hover, .connect__link:focus {
   color: var(--secondary-text-color-light);
+}
+@media screen and (min-width: 1200px) {
+  .connect__link {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .icon {
@@ -599,18 +618,12 @@ img {
   border: none;
   cursor: pointer;
 }
-
-.menu-close__icon {
-  fill: currentColor;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu-close__icon:hover, .menu-close__icon:focus {
+.menu-close:focus {
   fill: var(--acent-color);
 }
 
 .mob-menu {
-  padding: 48px 0 48px 48px;
+  padding: 48px 0 48px 40px;
 }
 
 .mob-menu__list {
@@ -619,10 +632,15 @@ img {
 
 .mob-menu__link {
   font-weight: 500;
-  font-size: 40px;
+  font-size: 8vw;
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: #212121;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu__link:focus {
+  color: var(--acent-color);
 }
 
 .mob-menu__item:not(:last-child) {
@@ -631,18 +649,28 @@ img {
 
 .mob-connect__mail {
   font-weight: 500;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 5vw;
+  line-height: 1.67;
   letter-spacing: 0.02em;
   color: #757575;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-connect__mail:focus {
+  color: var(--acent-color);
 }
 
 .mob-connect__tel {
   font-weight: 500;
-  font-size: 34px;
-  line-height: 40px;
+  font-size: 7vw;
+  line-height: 1.18;
   letter-spacing: 0.02em;
   color: #757575;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-connect__tel:focus {
+  color: var(--acent-color);
 }
 
 .mob-connect__item:not(:last-child) {
@@ -657,6 +685,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -668,7 +698,7 @@ img {
 
 .mob-network__link {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 3vw;
   line-height: 22px;
   letter-spacing: 0.02em;
   color: #2196F3;
@@ -692,9 +722,8 @@ img {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-mobile-2x.jpg");
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 767px) {
   .hero {
-    max-width: 768px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-tablet.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-tablet.jpg");
   }
@@ -705,7 +734,7 @@ img {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-tablet-2x.jpg");
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .hero {
     max-width: 1600px;
     padding: 200px 0;
@@ -713,7 +742,7 @@ img {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
   }
 }
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-2x.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-2x.jpg");
@@ -813,6 +842,22 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 1199px) {
+  .about-work {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(50%);
+            clip-path: inset(50%);
+    margin: -1px;
+  }
 }
 
 .about-work__list {
@@ -951,6 +996,7 @@ img {
 
 .clients__item {
   height: 92px;
+  width: 100%;
   width: calc((100% - 30px) / 2);
 }
 @media screen and (min-width: 768px) {
