--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -62,21 +62,28 @@
   }
 }
 .connect__item:not(:last-child) {
-  margin-bottom: 10px;
+  @media screen and (max-width:1199px) {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width:1200px) {
+    margin-right: 30px;
+  }
 }
 .connect__item a {
   color: var(--primary-text-color-dark);
 }
 .connect__link {
   display: flex;
-  justify-content: center;
-  align-items: center;
   color: var(--primary-text-color-dark);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @include font(500, 14px, 1.14, 0.02em);
   &:hover,
   &:focus {
   color: var(--secondary-text-color-light);
+}
+@media screen and (min-width:1200px) {
+  justify-content: center;
+  align-items: center;
 }
 }
 .icon {
@@ -134,44 +141,51 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-}
-.menu-close__icon {
-  fill: currentColor;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
   &:focus {
-  fill: var(--acent-color);
-}
+    fill: var(--acent-color);
+  }
 }
 .mob-menu{
-  padding: 48px 0 48px 48px;
+  padding: 48px 0 48px 40px;
 }
 .mob-menu__list{
   margin-bottom: 50px;
 }
 .mob-menu__link{
 font-weight: 500;
-font-size: 40px;
+font-size: 8vw;
 line-height: 1.18;
 letter-spacing: 0.02em;
 color: #212121;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+&:focus {
+  color: var(--acent-color);
+}
 }
 .mob-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
 .mob-connect__mail{
   font-weight: 500;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 5vw;
+  line-height: 1.67;
   letter-spacing: 0.02em;
   color: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus {
+    color: var(--acent-color);
+  }
 }
 .mob-connect__tel{
   font-weight: 500;
-font-size: 34px;
-line-height: 40px;
+font-size: 7vw;
+line-height: 1.18;
 letter-spacing: 0.02em;
 color: #757575;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+&:focus {
+  color: var(--acent-color);
+}
 }
 .mob-connect__item:not(:last-child) {
   margin-bottom: 32px;
@@ -181,6 +195,7 @@ color: #757575;
 }
 .mob-network__list{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 .mob-network__item:not(:last-child) {
@@ -188,7 +203,7 @@ color: #757575;
 }
 .mob-network__link{
   font-weight: 500;
-font-size: 16px;
+font-size: 3vw;
 line-height: 22px;
 letter-spacing: 0.02em;
 color: #2196F3;
