--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -24,8 +24,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  @media screen and (min-width:768px) {
-    max-width: 768px;
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+    // max-width: 768px;
     background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -44,7 +44,7 @@
     ),
     url("../images/hero-tablet-2x.jpg");
 }
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width:768px) {
     max-width: 1600px;
     padding: 200px 0;
     background-image: linear-gradient(
