--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,8 +19,6 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  // width: 528px;
-  // min-height: 581px;
   width: 450px; ;
   min-height: 609px;
   padding: 40px;
@@ -28,6 +26,10 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and (min-width:1200px) {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 .backdrop-form {
   width: 100%;
@@ -128,7 +130,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
-  @include font(400, 14px, 1.71, 0.03em);
+  @include font(400, 12px, 1.71, 0.03em);
 }
 .checkbox {
   appearance: none;
