--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,16 +1,18 @@
 .section {
-  // padding-top: 94px;
-  // padding-bottom: 94px;
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width:1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .section-title {
   margin-bottom: 50px;
-  @include font(700, 36px, 1.17, 0.03em);
+  @include font(700, 28px, 1.17, 0.03em);
   text-align: center;
   color: var(--secondary-text-color-dark);
   @media screen and (max-width:1199px) {
     margin-bottom: 30px;
-    size: 28px;
+    @include font(700, 36px, 1.17, 0.03em);
   }
 }
