--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -44,33 +44,21 @@
     ),
     url("../images/hero-tablet-2x.jpg");
 }
-  @media screen and (min-width:768px) {
-    max-width: 1600px;
-    padding: 200px 0;
-    background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/hero.jpg");
-    @media (min-device-pixel-ratio: 2),
-    (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../images/hero-2x.jpg"); 
-  }
+  
+@media screen and (min-width:1200px) {
+  padding: 200px 0;
 }
 }
+
 .hero__title {
   margin: 0 auto 30px;
   color: var(--primary-text-color-light);
   @include font(900, 26px, 1.62, 0.06em);
   text-transform: uppercase;
+  @media screen and (max-width:1200px) {
+    display: flex;
+    max-width: 360px;
+  }
   @media screen and (min-width:1200px) {
     @include font(900, 44px, 1.36, 0.06em); 
   }
