--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -7,12 +7,12 @@
   }
 }
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   @include font(700, 28px, 1.17, 0.03em);
   text-align: center;
   color: var(--secondary-text-color-dark);
-  @media screen and (max-width:1199px) {
-    margin-bottom: 30px;
+  @media screen and (min-width:1200px) {
+    margin-bottom: 50px;
     @include font(700, 36px, 1.17, 0.03em);
   }
 }
