--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -48,7 +48,7 @@
 }
 .connect {
   display: none;
-  justify-content: center;
+  // justify-content: center;
   margin-left: auto;
   @media screen and (min-width:768px) and (max-width:1199px) {
     display: flex;
@@ -76,7 +76,7 @@
   display: flex;
   color: var(--primary-text-color-dark);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  @include font(500, 14px, 1.14, 0.02em);
+  @include font(500, 12px, 1.14, 0.02em);
   &:hover,
   &:focus {
   color: var(--secondary-text-color-light);
@@ -84,20 +84,31 @@
 @media screen and (min-width:1200px) {
   justify-content: center;
   align-items: center;
+  @include font(500, 12px, 1.14, 0.02em);
 }
 }
 .icon {
   fill: currentColor;
 }
 .connect__icon-mail {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
+  width: 14px;
+  height: 10px;
+  margin-right: 8px;
+  @media screen and (min-width:1200px) {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+  }
 }
 .connect__icon-phone {
-  width: 16px;
-  height: 12px;
+  width: 10px;
+  height: 14px;
+  margin-right: 8px;
+  @media screen and (min-width:1200px) {
+  width: 10px;
+  height: 16px;
   margin-right: 10px;
+  }
 }
 
 .menu-open{
