--- a/css/main.css
+++ b/css/main.css
@@ -722,16 +722,24 @@ img {
           align-items: center;
 }
 
-.mob-network__item:not(:last-child) {
-  margin-right: 20px;
-}
-
 .mob-network__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-weight: 500;
-  font-size: 3vw;
+  font-size: 4vw;
   line-height: 22px;
   letter-spacing: 0.02em;
   color: #2196F3;
+}
+
+.mob-network__item:not(:last-child) .mob-network__link::after {
+  content: "";
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 1px;
+  height: 22px;
+  background: rgba(33, 33, 33, 0.2);
 }
 
 .hero {
@@ -767,7 +775,6 @@ img {
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 1600px;
-    padding: 200px 0;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
   }
@@ -776,6 +783,11 @@ img {
   .hero {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-2x.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-2x.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
   }
 }
 
@@ -790,9 +802,6 @@ img {
 }
 @media screen and (max-width: 1200px) {
   .hero__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     max-width: 360px;
   }
 }
@@ -802,6 +811,7 @@ img {
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
+    max-width: 696px;
   }
 }
 
@@ -810,6 +820,10 @@ img {
   min-width: 200px;
   height: 50px;
   padding: 10px 24px;
+}
+
+.peculiarities {
+  padding-bottom: 0;
 }
 
 .peculiarities-list {
@@ -1097,7 +1111,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .footer__tablet {
     margin-bottom: 60px;
   }
@@ -1195,7 +1209,6 @@ img {
 }
 @media screen and (max-width: 767px) {
   .footer__networks {
-    margin-bottom: 60px;
     width: 100%;
   }
 }
