--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -20,7 +20,7 @@
 }
 .footer__tablet{
   // display: none;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     margin-bottom: 60px;
     }
   @media screen and (min-width: 768px) {
@@ -77,7 +77,6 @@
   text-align: center;
   }
   @media screen and (max-width:767px) {
-    margin-bottom: 60px;
     width: 100%;
   }
 }
