--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -208,13 +208,21 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   flex-wrap: wrap;
   align-items: center;
 }
-.mob-network__item:not(:last-child) {
-  margin-right: 20px;
-}
 .mob-network__link{
+  display: flex;
   font-weight: 500;
-font-size: 3vw;
+font-size: 4vw;
 line-height: 22px;
 letter-spacing: 0.02em;
 color: #2196F3;
+}
+.mob-network__item:not(:last-child) {
+  .mob-network__link::after {
+    content: "";
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 1px;
+    height: 22px;
+    background: rgba(33, 33, 33, 0.2);
+  }
 }
