--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -25,7 +25,6 @@
   background-position: center;
   background-size: cover;
   @media screen and (min-width: 481px) and (max-width: 767px) {
-    // max-width: 768px;
     background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -47,7 +46,6 @@
   
 @media screen and (min-width:768px) {
   max-width: 1600px;
-  padding: 200px 0;
   background-image: linear-gradient(
     to right,
     rgba(47, 48, 58, 0.4),
@@ -66,6 +64,9 @@
     url("../images/hero-2x.jpg"); 
 }
 }
+@media screen and (min-width:1200px) {
+  padding: 200px 0;
+}
 }
 .hero__title {
   margin: 0 auto 30px;
@@ -73,11 +74,11 @@
   @include font(900, 26px, 1.62, 0.06em);
   text-transform: uppercase;
   @media screen and (max-width:1200px) {
-    display: flex;
     max-width: 360px;
   }
   @media screen and (min-width:1200px) {
     @include font(900, 44px, 1.36, 0.06em); 
+    max-width: 696px;
   }
 }
 .hero__button {
